# repo-summarizer-v1

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  repo-analyzer.config.example.jsonc  repo-analyzer.config.json
.github/af-config/: LICENSE_HEADER  license-header.config.json  repo-analyzer.config.json
.github/workflows/: af_maintenance.yml
docs/: roadmap.md  walkthrough.md
repo_analyzer/: __init__.py  cli.py  dependency_graph.py  file_summary.py  language_registry.py  parser_adapters.py  stdlib_classification.py  tree_report.py
self-analysis/: MULTI_LANGUAGE_TESTING.md  SUMMARY.md  dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
test-error-output/: SUMMARY.md
tests/: test_dependency_graph.py  test_file_summary.py  test_language_registry.py  test_low_level_languages.py  test_multi_language_fixtures.py  test_parser_adapters.py  test_stdlib_classification.py  test_tree_report.py
tests/fixtures/: README.md
tests/fixtures/c_cpp_rust/: lib.rs  main.c  utils.c  utils.h  utils.rs  vector_ops.cpp
tests/fixtures/go_sql/: main.go  schema.sql
tests/fixtures/go_sql/migrations/: 001_add_status.sql
tests/fixtures/go_sql/queries/: user_queries.sql
tests/fixtures/html_css_js/: index.html
tests/fixtures/html_css_js/js/: app.js  utils.js
tests/fixtures/html_css_js/styles/: components.css  main.css
tests/fixtures/swift_csharp/: AppDelegate.swift  Program.cs  UserModel.swift  UserService.cs  UserViewController.swift
tests/golden_outputs/: README.md
tests/golden_outputs/c_cpp_rust/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
